# vty-whisper-tui

./: CHANGELOG.md  README.md  copy-audio.sh  copy-to-clipboard.sh  local-transcribe-audio.sh  record-audio.sh  release.nix  run.nix  shell.nix  transcribe-audio.sh  vty-whisper.cabal
app/: Main.hs
nixpkgs/: github.json
reflex-platform/: github.json
